deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${APP_NAMESPACE}
  labels:
    app.kubernetes.io/name: movie-stream
    app.kubernetes.io/part-of: movie-stream
