deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-stream
  namespace: ${APP_NAMESPACE}
  labels:
    app.kubernetes.io/name: movie-stream
    app.kubernetes.io/part-of: movie-stream
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: ${AWS_ACM_CERTIFICATE_ARN}
    alb.ingress.kubernetes.io/group.name: movie-stream
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/use-regex-path-match: "true"
spec:
  ingressClassName: alb
  rules:
    - host: ${APP_DOMAIN}
      http:
        paths:
          - path: /api/movies/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: movie-gateway
                port:
                  number: 8079
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: movie-gateway
                port:
                  number: 8079
          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: movie-gateway
                port:
                  number: 8079
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: movie-gateway
                port:
                  number: 8079
          - path: /swagger-ui.html
            pathType: Prefix
            backend:
              service:
                name: movie-gateway
                port:
                  number: 8079
          - path: /webjars
            pathType: Prefix
            backend:
              service:
                name: movie-gateway
                port:
                  number: 8079
          - path: /pgadmin
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movies-ui
                port:
                  number: 80
    - host: ${KEYCLOAK_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
